# fossmodmanager-MHW

./: .cursorignore  .env  .gitignore  LICENSE  README.md  appmanifest_236430.acf  index.html  package.json  pnpm-lock.yaml  protonupqt-reference.py  setup.html  setup.js  tokencount.py  vite.config.js
.cursor/: DESIGN_GOALS.mdc  cursorrules.mdc
.github/workflows/: main.yml  test-build-only.yml
.ignore_jsonexamples/: fabius.json  lepus.json
src/: App.jsx  AppCustomStyles.css  AppInitializer.jsx  ErrorPage.jsx  main.jsx  setup-main.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  dev-capability.json  prerelease.json
src-tauri/dist-isolation/: index.html  index.js
src-tauri/game_configs/: mhwilds.json  mhwilds.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/nexus_api/: mod.rs
src-tauri/src/utils/: cachethumbs.rs  config.rs  mod.rs  modregistry.rs  skinextract.rs  skinmanager.rs  tempermission.rs
src-tauri/test/: osinfo.rs
src-tauri/tests/: setup_test.rs
src/components/: CustomInstallButton.jsx  CustomInstallButton.module.css  ExtractGameAssets.jsx  InstallerCard.jsx  LoadInitial.jsx  LoadingOverlay.jsx  LocalMods.jsx  MainContent.jsx  SearchPage.jsx  SettingsPage.jsx  SetupOverlay.jsx  Sidebar.jsx  SkinMods.jsx  startupoverlay.css  styles.css
src/components/cssmodules/: arkveldrune.module.css
src/contexts/: GameConfigContext.jsx
src/data/: mods.json
src/hooks/: devenv.js  preventleakage.js  useInstaller.js
tauri-action/: test-build-only.yml
tests/: new_user_test.sh
