[package]
name = "fossmodmanager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fossmodmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rec.13", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs = "2.2.1"
tauri-plugin-store = "2.2.0"
tauri-plugin-http = "2.2.1"
anyhow = "1.0.98"
dialoguer = "0.11.0"
steamlocate = "2.0.1"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-os = "2.2.1"
shellexpand = "3.1.1"
vdf-reader = "0.3.0"
base64 = "0.22.1"
reqwest = { version = "0.12.15", features = ["json"] }
tauri-plugin-shell = "2"
tauri-plugin-devtools = "2.0.0"
dotenvy = "0.15.7"
tokio = "1.44.2"
futures-util = "0.3.31"
log = "0.4.27"
zip = "2.6.1"
tauri-plugin-log = "2.4.0"
regex = "1.11.1"
once_cell = "1.21.2"
bytes = "1.10.1"
walkdir = "2.4.0"
chrono = "0.4.40"
env_logger = "0.11.8"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
